# python_bzlmod_test

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  foo.py  main.py  requirements_lock.txt
bar/: BUILD.bazel  MODULE.bazel  main.py  requirements.txt  requirements_lock.txt
