module(
    name = "bar",
)

bazel_dep(name = "foo")
bazel_dep(name = "rules_python", version = "1.4.1")

local_path_override(module_name = "foo", path = "../")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)
use_repo(python, "python_3_9", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bar_pip_deps",
    python_version = "3.9",
    requirements_lock = "@bar//:requirements_lock.txt",
)
use_repo(pip, "bar_pip_deps")
